[svn-search] terse output even terser ;-)
git-svn-id: http://svn.pugscode.org/pugs@20590 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/svn-search/cgi/search.tmpl
+++ b/misc/svn-search/cgi/search.tmpl
@@ -46,6 +46,7 @@
         <h3>Revision <a href="http://dev.pugscode.org/changeset/<TMPL_VAR
         NAME=revision>"><TMPL_VAR NAME=revision></a> by <TMPL_VAR NAME=author></h3>
         <pre><TMPL_VAR NAME=message></pre>
+        <TMPL_IF paths>
         <p>Modified files:</p>
         <ul>
         <TMPL_LOOP NAME=paths>
@@ -53,6 +54,7 @@
             NAME=path>?rev=<TMPL_VAR NAME=revision>"><TMPL_VAR NAME=path></a></li>
         </TMPL_LOOP>
         </ul>
+        </TMPL_IF>
     </TMPL_LOOP>
     </div>
 
